# devcontainer

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.dev/plan/: 260317-plan-devcc-impl.md  260317-plan-devcc-package.md  260317-plan-reduce-languages.md
.dev/spec/: 260317-spec-devcc-package.md
.github/workflows/: test.yml
devcontainer/: common-setup.sh  zsh-custom.sh
devcontainer/c-cpp-fortran/: devcontainer.json
devcontainer/julia/: devcontainer.json
devcontainer/node/: devcontainer.json
devcontainer/python/: devcontainer.json
devcontainer/r/: devcontainer.json
devcontainer/rust/: devcontainer.json
src/devcc/: __init__.py  __main__.py  cli.py  dimensions.py  generator.py  validator.py
src/devcc/data/agents/: claude-code.json  codex.json  copilot.json  cursor.json  gemini.json
src/devcc/data/base/: base.json
src/devcc/data/languages/: c-cpp-fortran.json  julia.json  node.json  python.json  r.json  rust.json
src/devcc/data/shared/: common-setup.sh  system-setup.sh  zsh-custom.sh
tests/: conftest.py  test_cli.py  test_dimensions.py  test_generator.py  test_validator.py
