[project]
name = "devcc"
version = "0.1.0"
description = "Generate devcontainer templates for AI coding agents"
requires-python = ">=3.11"
dependencies = ["click", "jsonschema"]

[project.scripts]
devcc = "devcc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devcc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]
