[project]
name = "devcc"
version = "0.1.0"
description = "Generate devcontainer templates for AI coding agents"
authors = [{ name = "Cunliang Geng", email = "c.geng@esciencecenter.nl" }]
requires-python = ">=3.11"
dependencies = [
    "click",
    "jsonschema>=4.18",
    "rich-click>=1.9.7",
]

[project.scripts]
devcc = "devcc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devcc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = ["pytest", "ruff"]
